Fix app spacing and menu bar

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -54,7 +54,7 @@
 }
 
 .menu-bar {
-  padding: 10px;
+  padding: 15px;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -103,5 +103,9 @@
   padding: 20px;
   -webkit-box-shadow: -1px 5px 9px 5px rgba(0, 0, 0, 0.2);
   box-shadow: -1px 5px 9px 5px rgba(0, 0, 0, 0.2);
+}
+
+.spacing {
+  margin-bottom: 80px;
 }
 
