--- a/resources/src/sass/_menuBar.scss
+++ b/resources/src/sass/_menuBar.scss
@@ -1,8 +1,8 @@
 .menu-bar {
-	padding:10px;
+	padding:15px;
 	position:fixed;    
   	bottom:0;         
   	left:0; 
-  	right:0; 
-
+	right:0; 
 }
+
